<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/Picture_attacks"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/Picture_attacks"
        android:src="@drawable/ic_launcher_background"
        android:padding="5dp"/>
    <TextView
        style="@style/title"
        android:id="@+id/Name_attacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name_attacks"
        android:layout_toRightOf="@+id/Picture_attacks"/>
    <TextView
        android:id="@+id/Descr_attacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Descr_attacks"
        android:layout_toRightOf="@+id/Picture_attacks"
        android:layout_below="@+id/Name_attacks"/>
</RelativeLayout>